html/css/style.less
/* ... */
@media screen and (max-device-width: 730px) {
	
	h1.mega{
		margin-bottom: 5%;
		font-size: 1.6em;
		}

	h2.form{
		clear: both;
		float: none;
		width: 100%;
		padding-top: 0;
		margin-bottom: 3%;
		text-align: right;
		}
		
	header{
		h1{
			float: none;
			
			a, a:visited{
				margin: 0 auto;
				width: 204px;
				height: 60px;
				background: url('../images/site/social-logo-large.png') no-repeat 0 0;
				}
			
			a:hover, a:active, a:focus{
				background-position: 0 -60px;
				}
			}
			
		#user-area{
			clear: both;
			float: none;
			width: 100%;
			margin-bottom: 5%;
			text-align: center;
			line-height: 25px;
			
			p{
				float: none;
				display: inline;
				margin-right: 3%;
				}
			}
			
		nav{
			
			ul{
				overflow: hidden;
				clear: both;
				float: none;
				width: 100%;
				margin: 0 auto;
				font-size: 1.2em;
				text-align: center;
				
				li{
					float: none;
					display: inline;
					}
				}
				
			form{
				clear: both;
				float: none;
				width: 80%;
				margin: 3% auto 0;
				
				input[type="text"]{
					height: 12px;
					}
				}
			}
		}
	
	#content{
		section.mega{
			article{
				clear: both;
				float: none;
				width: 100%;
				max-width: 430px;
				margin: 0 auto !important;
				}
			}
		}
	}

@media screen and (max-width: 600px) {
	header{
		
		nav{
			
			ul{
				font-size: 1.1em;
				}
			
			li{
				margin-right: 3%;
				}
			
			li:last-child{
				margin-right: 0;
				}
				
			form{
				input[type="text"]{
					height: 15px;
					}
				}
			}
		}
		
	#content{
		section.small{
			article{
				.item-image{
				
					.calendar-icon{
						.month{
							font-size: .8em;
							}
						
						.day{
							font-size: 1.5em;
							}
						}
					}
				}
			}
		}
	}

@media screen and (max-device-width: 600px) {
	header{
		
		nav{
			
			ul{
				font-size: 1.1em;
				}
			
			li{
				margin-right: 3%;
				}
			
			li:last-child{
				margin-right: 0;
				}
				
			form{
				input[type="text"]{
					height: 15px;
					}
				}
			}
		}
		
	#content{
		
		section.small{
			article{
				.item-image{
				
					.calendar-icon{
						.month{
							font-size: .8em;
							}
						
						.day{
							font-size: 1.5em;
							}
						}
					}
				}
			}
		}
	}

@media screen and (max-width: 480px) {
	header {
		nav {
			form{
				input[type="text"]{
					height: 15px;
					}
				
				input[type="submit"]{
					top: 4px;
					}
				}
			}
		}
	
	#content {
		
		> section{
			overflow: hidden;
			float: none !important;
			width: 100% !important;
			margin: 0 auto 50px;
			}
		
		section#user.mega{
			
			img{
				display: block;
				clear: both;
				float: none;
				width: 100%;
				max-width: 300px;
				margin: 0 auto 5%;
				}
				
			div.large{
				clear: both;
				float: none;
				width: 100%;
				margin-bottom: 5%;
				}
			
			div.small{
				width: 47%;
				margin-right: 3%;
				}
			}
		
		section.large{
			margin-right: 0;
			
			a img{
				display: block;
				clear: both;
				float: none;
				width: 100%;
				max-width: 300px;
				margin: 0 auto 5%;
				}
			
			article{
				overflow: hidden;
				min-height: 0;
				
				h2, p, p.tags, p.comments{
					position: relative;
					width: 100%;
					padding-left: 0;
					}
				
				.item-image{
					clear: both;
					float: none;
					width: 100%;
					max-width: 300px;
					margin: 0 auto;
					}
				
				h2{
					margin-top: 2%;
					}
				
				.comments{
					margin-top: 2%;
					left: 0;
					}
				}
				
			div.large{
				clear: both;
				float: none;
				width: 100%;
				margin-bottom: 5%;
				}
			
			div.small{
				width: 47%;
				margin-right: 3%;
				}
			}
		
		section.medium{
			article{
				width: 100%;
				margin-left: 0;
				}
			}
		
		section.small{
			article{
				.item-image{
				
					.calendar-icon{
						.month{
							font-size: .9em;
							}
						
						.day{
							font-size: 1.9em;
							}
						}
					}
				}
			}
		}
		
	.start-page{
		#people{
			display: none;
			}
		}
	
	footer{
		small, nav{
			display: block;
			width: 100%;
			text-align: center;
			}
		
		nav{
			margin: 1% 0 3%;
			}
		}
	}

@media screen and (max-device-width: 480px) {
	header {
		nav {
			form{
				input[type="text"]{
					height: 15px;
					}
				
				input[type="submit"]{
					top: 4px;
					}
				}
			}
		}
	
	#content {
		
		> section{
			overflow: hidden;
			float: none !important;
			width: 100% !important;
			margin: 0 auto 50px;
			}
		
		section#user.mega{
			
			img{
				display: block;
				clear: both;
				float: none;
				width: 100%;
				max-width: 300px;
				margin: 0 auto 3%;
				}
				
			div.large{
				clear: both;
				float: none;
				width: 100%;
				margin-bottom: 3%;
				}
			
			div.small{
				width: 47%;
				margin-right: 3%;
				}
			}
		
		section.large{
			margin-right: 0;
			
			article{
				overflow: hidden;
				min-height: 0;
				
				h2, p, p.tags, p.comments{
					position: relative;
					width: 100%;
					padding-left: 0;
					}
				
				.item-image{
					clear: both;
					float: none;
					width: 100%;
					max-width: 300px;
					margin: 0 auto;
					}
				
				h2{
					margin-top: 2%;
					}
				
				.comments{
					margin-top: 2%;
					left: 0;
					}
				}
			}
		
		section.medium{
			article{
				width: 100%;
				margin-left: 0;
				}
			}
		
		section.small{
			article{
				.item-image{
				
					.calendar-icon{
						.month{
							font-size: .9em;
							}
						
						.day{
							font-size: 1.9em;
							}
						}
					}
				}
			}
		}
		
	.start-page{
		#people{
			display: none;
			}
		}
	
	footer{
		small, nav{
			display: block;
			width: 100%;
			text-align: center;
			}
		
		nav{
			margin: 1% 0 3%;
			}
		}
	}

@media screen and (max-width: 410px) {
	header {
		nav {
			ul{
				margin-bottom: 5%;
				font-size: 1em;
				}
			}
		}
	}

@media screen and (max-device-width: 410px) {
	header {
		nav {
			ul{
				margin-bottom: 5%;
				font-size: 1em;
				}
			}
		}
	}
/* ... */

